Update PostServiceTest.java